--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "react-starter",
+  "name": "graphql-server",
   "version": "1.0.0",
-  "description": "A react base project",
+  "description": "An Express node server run graphql ",
   "scripts": {
     "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js",
     "test": "mocha --require babel-register",
     "test-watch": "mocha --require babel-register --watch"
   },
   "keywords": [
-    "react",
     "babel",
     "graphQl",
     "relay"
